Fixed mobile buttons stretching offscreen

--- a/css/robosane.css
+++ b/css/robosane.css
@@ -25,6 +25,10 @@ p > img {
   height: auto;
 }
 
+.btn {
+  white-space: normal;
+}
+
 .cbMenu > li > a {
   background-color: #fff;
 }
